# jwlmanager

./: CHANGELOG.md  HELP.md  JWLManager.py  LICENSE  README  README.md  README.txt  about.ui  jwlcore.py  pyproject.toml  resources.db  ui6_main_window.py  ui_about.py  ui_main_window.py
.github/: SECURITY.md  jwlCore.nuitka-package.config.yml
.github/workflows/: JWLManager.app.spec  JWLManager.bin.spec  JWLManager.exe.spec  JWLManager.zip.spec  build.yml  build_lin-nuitka.yml  build_lin-x86_64.yml  build_lin.yml  build_linux.yml  build_mac-arm64.yml  build_mac-nuitka.yml  build_mac-old.yml  build_mac-x86_64.yml  build_mac.yml  build_macOS.yml  build_w.yml  build_win-amd64.yml  build_win-arm.yml  build_win-arm64.yml  build_win-nuitka.yml  build_win.yml  build_windows.yml  jwlCore.config  jwlCore.nuitka-package.config.yml  jwlCore.txt  jwlCore.yml  release.yml  release_body.md  requirements.mac  requirements.txt  test.yml
libs/: libjwlCore-arm64.dylib  libjwlCore-x86_64.dylib  libjwlCore.dylib
res/: HELP.md  HILFE.md  Publications.csv  _NOTES.txt  blank  blank.jwlibrary  blank_playlist  blank_playlist.db  dark.qss  light.qss  main_window.ui  requirements-winarm.txt  requirements.txt  resources.db  ui6_main_window.py  ui_data_viewer.py  ui_extras.py  ui_main_window.py  userData-schema.sql
res/icons/: JWLManager.icns
res/locales/: de.qm  en.pot  fr.qm
res/locales/Resources/: _.csv  _.txt  de.csv  en.csv  en.txt  es.csv  es.txt  extras-de.csv  extras-en.csv  extras-en.json  extras-es.csv  extras-es.json  (+46 more)
ui/: about.ui  main_window.ui  ui_about.py  ui_main_window.py
(+129 files in other folders)
